test/e2e/testdata/ratelimit-cidr-match.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ratelimit-cidr-match
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-all-ips
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: cidr-ratelimit
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - sourceCIDR:
                value: 0.0.0.0/0
                type: Distinct
          limit:
            requests: 3
            unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cidr-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-cidr-match
    - name: ratelimit-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cidr-match
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ratelimit-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http-1
      port: 80
      protocol: HTTP
      hostname: app1.example.com
      allowedRoutes:
        namespaces:
          from: All
    - name: http-2
      port: 80
      protocol: HTTP
      hostname: app2.example.com
      allowedRoutes:
        namespaces:
          from: All
---
